2010-08-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_load_sb): Handle grub_disk_read
	errors.

2010-08-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle USB pendrives exposed as floppies.

	* grub-core/boot/i386/pc/boot.S: Check LBA even on what appears to be
	floppy.
	* grub-core/disk/i386/pc/biosdisk.c (grub_biosdisk_open): Likewise.
	Check for partitions on all devices.

2010-08-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/ofconsole.c (put): Correct prototype.
	(readkey): Likewise.

2010-08-25  BVK Chaitanya  <bvk.groups@gmail.com>

	Multiple variable names support to "export" command.

	* normal/context.c (grub_cmd_export): "export" command supports
	multiple variable names.

2010-08-23  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/30_os-prober.in: Fix conversion from grub-probe
	--target=drive output to Mach device name.

2010-08-23  BVK Chaitanya  <bvk.groups@gmail.com>

	New Automake based build system for GRUB.

	* ABOUT-NLS: New file.
	* Makefile.am: New file. GRUB host utils' rules that doesn't fit
	in Makefile.util.def file.
	* Makefile.util.def: New file.  Autogen build definitions file for
	GRUB host utils.
	* conf/Makefile.common: New file.  Common variables for GRUB host
	utils and target modules.
	* conf/Makefile.extra-dist: New file.  Extra files for make dist.
	* docs/Makefile.am: New file.  Automake file for docs.
	* gentpl.py: New file.  Python script to generate Autogen
	template.
	* grub-core/Makefile.am: New file.  GRUB target modules' rules
	that doesn't fit in Makefile.core.def file.
	* grub-core/Makefile.core.def: New file.  Autogen build
	definitions file for GRUB target modules.
	* grub-core/lib/setjmp.S: New file.  Wrapper for target_cpu
	specific setjmp.S file.
	* po/Makefile.am: New file.

	* .bzrignore: New ignores.
	* INSTALL: New requirements, without Ruby.
	* acinclude.m4: Use TARGET_IMG_BASE_LDOPT variable instead.